--- a/templates/student/pastpapers.html
+++ b/templates/student/pastpapers.html
@@ -11,16 +11,20 @@
         <h1>Get Started with these examination pastpapers</h1>
         <h2>Categories</h2>
         <div class="category-grid">
-            <div class="category-card">Mathematics</div>
-            <div class="category-card">English</div>
-            <div class="category-card">Kiswahili</div>
-            <div class="category-card">Religious Education</div>
-            <div class="category-card">History</div>
-            <div class="category-card">Geography</div>
-            <div class="category-card">Biology</div>
-            <div class="category-card">Chemistry</div>
-            <div class="category-card">Physics</div>
+            <div class="category-card">
+                <a href="media/pastpapers/" download="kcse_math_p1.pdf">Mathematics</a>
+            </div>
+            <div class="category-card"><a href="media/pastpapers/kcse-eng-p3.pdf" download="kcse_eng_p3.pdf">English</a></div>
+            <div class="category-card"><a href="media/pastpapers/kcse-kisw-p1.pdf" download="kcse_kisw_p1.pdf">Kiswahili</a></div>
+            <div class="category-card"><a href="media/pastpapers/kcse-re-p1.pdf" download="kcse_re_p1.pdf">Religious Education</a></div>
+            <div class="category-card"><a href="media/pastpapers/kcse-bio-p1.pdf" download="kcse_bio_p1.pdf">Biology</a></div>
+            <div class="category-card"><a href="media/pastpapers/kcse-chem-p1.pdf" download="kcse_chem_p1.pdf">Chemistry</a></div>
+            <div class="category-card"><a href="media/pastpapers/kcse-phy-p1.pdf" download="kcse_phy_p1.pdf">Physics</a></div>
+            <div class="category-card"><a href="media/pastpapers/kcse-geo-p1.pdf" download="kcse_geo_p1.pdf">Geography</a></div>
+            <div class="category-card"><a href="media/pastpapers/" download="kcse_history_p1.pdf">History</a></div>
         </div>
     </div>
+    <!-- <script src="{{ url_for('serve_js', filename='pastpapers.js') }}"></script> -->
+     <script src="js/pastpapers.js"></script>
 </body>
 </html>
