--- a/templates/student/syllabus.html
+++ b/templates/student/syllabus.html
@@ -11,15 +11,17 @@
         <h1>Get Started with these subjects</h1>
         <h2>Categories</h2>
         <div class="category-grid">
-            <div class="category-card">Mathematics</div>
-            <div class="category-card">English</div>
-            <div class="category-card">Kiswahili</div>
-            <div class="category-card">Religious Education</div>
-            <div class="category-card">History</div>
-            <div class="category-card">Geography</div>
-            <div class="category-card">Biology</div>
-            <div class="category-card">Chemistry</div>
-            <div class="category-card">Physics</div>
+            <div class="category-card">
+                <a href="media/syllabus/" download="MATHEMATICS_SYLLABUS.pdf">Mathematics</a>
+            </div>
+            <div class="category-card"><a href="media/syllabus/" download="BIOLOGY_SYLLABUS.pdf">Biology</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="ENGLISH_SYLLABUS.pdf">English</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="KISWAHILI_SYLLABUS.pdf">Kiswahili</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="IRE_SYLLABUS.pdf">Religious Education</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="HISTORY_SYLLABUS.pdf">History</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="GEOGRAPHY_SYLLABUS.pdf">Geography</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="CHEMISTRY_SYLLABUS.pdf">Chemistry</a></div>
+            <div class="category-card"><a href="media/syllabus/" download="PHYSICS_SYLLABUS.pdf">Physics</a></div>
         </div>
     </div>
 </body>
