--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
 
             <ul class="nav-links">
                 <li ><a href="#" class="x-icon-menu"><i class="fa-solid fa-xmark fa-xl"></i></a></li>
-                <li><a href="/templates/index.html#Home">Home</a></li>
+                <li><a href="{{ url_for('main.home') }}">Home</a></li>
                 <li><a href="/templates/index.html#Features">Features</a></li>
                 <li><a href="/templates/index.html#About">About Us</a></li>
                 <li><a href="/templates/index.html#news">News</a></li>
