--- a/templates/parent/login-parent.html
+++ b/templates/parent/login-parent.html
@@ -62,7 +62,7 @@
 
             <ul class="nav-links">
                 <li><a href="#" class="x-icon-menu"><i class="fa-solid fa-xmark fa-xl"></i></a></li>
-                <li><a href="{{ url_for('main.home') }}#Home">Home</a></li>
+                <li><a href="{{ url_for('main.home') }}">Home</a></li>
                 <li><a href="{{ url_for('main.home') }}#Features">Features</a></li>
                 <li><a href="{{ url_for('main.home') }}#About">About Us</a></li>
                 <li><a href="{{ url_for('main.home') }}#news">News</a></li>
